--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,51 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #d58400;
+    --ifm-color-primary-dark: #c07700;
+    --ifm-color-primary-darker: #b57000;
+    --ifm-color-primary-darkest: #955c00;
+    --ifm-color-primary-light: #ea9100;
+    --ifm-color-primary-lighter: #f59800;
+    --ifm-color-primary-lightest: #ffa616;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+/**
+ * Any CSS included here will be global. The classic template
+ * bundles Infima by default. Infima is a CSS framework designed to
+ * work well for content-centric websites.
+ */
+
+/* You can override the default Infima variables here. */
+:root {
+  :root {
+    [data-theme='dark'] {
+      --ifm-color-primary: #ffaa00;
+      --ifm-color-primary-dark: #e69900;
+      --ifm-color-primary-darker: #d99000;
+      --ifm-color-primary-darkest: #b37700;
+      --ifm-color-primary-light: #ffb31a;
+      --ifm-color-primary-lighter: #ffb726;
+      --ifm-color-primary-lightest: #ffc34d;
+    }
+  }
+}
+
+/* For readability concerns, you should choose a lighter palette in dark mode. */
+[data-theme='dark'] {
+  :root {
+    [data-theme='dark'] {
+      --ifm-color-primary: #ffaa00;
+      --ifm-color-primary-dark: #e69900;
+      --ifm-color-primary-darker: #d99000;
+      --ifm-color-primary-darkest: #b37700;
+      --ifm-color-primary-light: #ffb31a;
+      --ifm-color-primary-lighter: #ffb726;
+      --ifm-color-primary-lightest: #ffc34d;
+    }
+  }
+}
+
 }
