--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,13 +6,13 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #d58400;
-    --ifm-color-primary-dark: #c07700;
-    --ifm-color-primary-darker: #b57000;
-    --ifm-color-primary-darkest: #955c00;
-    --ifm-color-primary-light: #ea9100;
-    --ifm-color-primary-lighter: #f59800;
-    --ifm-color-primary-lightest: #ffa616;
+  --ifm-color-primary: #ffaa00;
+  --ifm-color-primary-dark: #e69900;
+  --ifm-color-primary-darker: #d99000;
+  --ifm-color-primary-darkest: #b37700;
+  --ifm-color-primary-light: #ffb31a;
+  --ifm-color-primary-lighter: #ffb726;
+  --ifm-color-primary-lightest: #ffc34d;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
