--- a/src/components/HomepageFeatures/styles.module.css
+++ b/src/components/HomepageFeatures/styles.module.css
@@ -1,9 +1,13 @@
 .features {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  padding: 2rem 0;
+  width: 100%;
 }
 
 .featureSvg {
-  height: 100px; /* Ajustez la taille de l'icône si nécessaire */
+  height: 200px;
+  width: 200px;
 }
+
+/* Vous pouvez ajouter d'autres styles si nécessaire */
